# zinc

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: hardware.rs  install.rs  main.rs  ui.rs  zinc.rs
src/terminal/: term.rs  ui.rs  zinc.rs
