[package]
name = "zinc"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.20.0"
cursive-tabs = "0.7.0"
fs_extra = "1.3.0"

[profile.release]
opt-level = "s"
debug = false
strip = true
debug-assertions = false
overflow-checks = false 
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
